--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -91,7 +91,7 @@ The following packages will be downloaded:
     kiwisolver-1.4.4           |  py310hbf28c38_1          76 KB  conda-forge
     krb5-1.19.3                |       h3790be6_0         1.4 MB  conda-forge
     lame-3.100                 |    h166bdaf_1003         496 KB  conda-forge
-    lcms2-2.13.1               |       h6ed2654_0         254 KB  conda-forge
+    lcms2-2.14                 |       h6ed2654_0         256 KB  conda-forge
     lerc-4.0.0                 |       h27087fc_0         275 KB  conda-forge
     libbrotlicommon-1.0.9      |       h166bdaf_8          66 KB  conda-forge
     libbrotlidec-1.0.9         |       h166bdaf_8          33 KB  conda-forge
@@ -130,7 +130,7 @@ The following packages will be downloaded:
     nspr-4.32                  |       h9c3ff4c_1         233 KB  conda-forge
     nss-3.78                   |       h2350873_0         2.1 MB  conda-forge
     openjpeg-2.5.0             |       h7d73246_1         533 KB  conda-forge
-    openssl-1.1.1q             |       h166bdaf_1         2.1 MB  conda-forge
+    openssl-1.1.1s             |       h166bdaf_0         2.1 MB  conda-forge
     packaging-21.3             |     pyhd8ed1ab_0          36 KB  conda-forge
     pcre2-10.37                |       hc3806b6_1         1.1 MB  conda-forge
     pillow-9.2.0               |  py310h454ad03_3        45.3 MB  conda-forge
@@ -192,7 +192,7 @@ The following NEW packages will be INSTALLED:
   kiwisolver         conda-forge/linux-64::kiwisolver-1.4.4-py310hbf28c38_1 None
   krb5               conda-forge/linux-64::krb5-1.19.3-h3790be6_0 None
   lame               conda-forge/linux-64::lame-3.100-h166bdaf_1003 None
-  lcms2              conda-forge/linux-64::lcms2-2.13.1-h6ed2654_0 None
+  lcms2              conda-forge/linux-64::lcms2-2.14-h6ed2654_0 None
   lerc               conda-forge/linux-64::lerc-4.0.0-h27087fc_0 None
   libbrotlicommon    conda-forge/linux-64::libbrotlicommon-1.0.9-h166bdaf_8 None
   libbrotlidec       conda-forge/linux-64::libbrotlidec-1.0.9-h166bdaf_8 None
@@ -260,7 +260,7 @@ The following NEW packages will be INSTALLED:
 The following packages will be DOWNGRADED:
 
   cryptography                       38.0.2-py310h600f1e7_2 --&gt; 38.0.2-py310h597c629_2 None
-  openssl                                  3.0.7-h166bdaf_0 --&gt; 1.1.1q-h166bdaf_1 None
+  openssl                                  3.0.7-h166bdaf_0 --&gt; 1.1.1s-h166bdaf_0 None
   python                          3.10.6-ha86cf86_0_cpython --&gt; 3.10.6-h582c2e5_0_cpython None
 
 
@@ -311,4 +311,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Tuesday 1 November 2022 18:21">Tuesday 1 November 2022</span>. Using Julia version 1.8.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Wednesday 2 November 2022 01:03">Wednesday 2 November 2022</span>. Using Julia version 1.8.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
