--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -65,11 +65,10 @@ The following packages will be downloaded:
     brotli-1.0.9               |       h166bdaf_8          18 KB  conda-forge
     brotli-bin-1.0.9           |       h166bdaf_8          20 KB  conda-forge
     contourpy-1.0.6            |  py310hbf28c38_0         234 KB  conda-forge
-    cryptography-38.0.4        |  py310h597c629_0         1.3 MB  conda-forge
     cycler-0.11.0              |     pyhd8ed1ab_0          10 KB  conda-forge
     dbus-1.13.6                |       h5008d03_3         604 KB  conda-forge
     expat-2.5.0                |       h27087fc_0         189 KB  conda-forge
-    fftw-3.3.10                |nompi_hf0379b8_105         2.2 MB  conda-forge
+    fftw-3.3.10                |nompi_hf0379b8_106         2.1 MB  conda-forge
     font-ttf-dejavu-sans-mono-2.37|       hab24e00_0         388 KB  conda-forge
     font-ttf-inconsolata-3.000 |       h77eed37_0          94 KB  conda-forge
     font-ttf-source-code-pro-2.038|       h77eed37_0         684 KB  conda-forge
@@ -90,7 +89,7 @@ The following packages will be downloaded:
     jpeg-9e                    |       h166bdaf_2         269 KB  conda-forge
     keyutils-1.6.1             |       h166bdaf_0         115 KB  conda-forge
     kiwisolver-1.4.4           |  py310hbf28c38_1          76 KB  conda-forge
-    krb5-1.19.3                |       h3790be6_0         1.4 MB  conda-forge
+    krb5-1.19.3                |       h08a2579_0         1.4 MB  conda-forge
     lame-3.100                 |    h166bdaf_1003         496 KB  conda-forge
     lcms2-2.14                 |       h6ed2654_0         256 KB  conda-forge
     lerc-4.0.0                 |       h27087fc_0         275 KB  conda-forge
@@ -104,7 +103,7 @@ The following packages will be downloaded:
     libdb-6.2.32               |       h9c3ff4c_0        23.3 MB  conda-forge
     libdeflate-1.14            |       h166bdaf_0          81 KB  conda-forge
     libedit-3.1.20191231       |       he28a2e2_2         121 KB  conda-forge
-    libevent-2.1.10            |       h9b69904_4         1.1 MB  conda-forge
+    libevent-2.1.10            |       h28343ad_4         1.1 MB  conda-forge
     libflac-1.4.2              |       h27087fc_0         411 KB  conda-forge
     libgcrypt-1.10.1           |       h166bdaf_0         703 KB  conda-forge
     libglib-2.74.1             |       h606061b_1         3.1 MB  conda-forge
@@ -114,7 +113,7 @@ The following packages will be downloaded:
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
     libopus-1.3.1              |       h7f98852_1         255 KB  conda-forge
     libpng-1.6.39              |       h753d276_0         276 KB  conda-forge
-    libpq-14.5                 |       hf695f80_2         2.2 MB  conda-forge
+    libpq-15.1                 |       h67c24c5_1         2.4 MB  conda-forge
     libsndfile-1.1.0           |       h27087fc_0         370 KB  conda-forge
     libsystemd0-252            |       h2a991cd_0         384 KB  conda-forge
     libtiff-4.4.0              |       h55922b4_4         651 KB  conda-forge
@@ -130,24 +129,22 @@ The following packages will be downloaded:
     matplotlib-base-3.6.2      |  py310h8d5ebf3_0         7.6 MB  conda-forge
     mpg123-1.30.2              |       h27087fc_1         512 KB  conda-forge
     munkres-1.1.4              |     pyh9f0ad1d_0          12 KB  conda-forge
-    mysql-common-8.0.31        |       haf5c9bc_0         1.9 MB  conda-forge
-    mysql-libs-8.0.31          |       h28c427c_0         1.9 MB  conda-forge
+    mysql-common-8.0.31        |       h26416b9_0         1.9 MB  conda-forge
+    mysql-libs-8.0.31          |       hbc51c84_0         1.9 MB  conda-forge
     nspr-4.35                  |       h27087fc_0         222 KB  conda-forge
     nss-3.82                   |       he02c5a1_0         1.9 MB  conda-forge
     openjpeg-2.5.0             |       h7d73246_1         533 KB  conda-forge
-    openssl-1.1.1s             |       h166bdaf_0         2.1 MB  conda-forge
     packaging-21.3             |     pyhd8ed1ab_0          36 KB  conda-forge
     pcre2-10.40                |       hc3806b6_0         2.3 MB  conda-forge
     pillow-9.2.0               |  py310h454ad03_3        45.3 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
-    pulseaudio-16.1            |       h4a94279_0         1.7 MB  conda-forge
+    pulseaudio-16.1            |       h126f2b6_0         1.7 MB  conda-forge
     pyparsing-3.0.9            |     pyhd8ed1ab_0          79 KB  conda-forge
     pyqt-5.15.7                |  py310h29803b5_2         6.2 MB  conda-forge
     pyqt5-sip-12.11.0          |  py310hd8f1fbe_2          86 KB  conda-forge
-    python-3.10.8              |h257c98d_0_cpython        22.1 MB  conda-forge
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
-    qt-main-5.15.6             |       h7acdfc8_2        46.1 MB  conda-forge
+    qt-main-5.15.6             |       he99da89_3        48.3 MB  conda-forge
     sip-6.7.5                  |  py310hd8f1fbe_0         467 KB  conda-forge
     six-1.16.0                 |     pyh6c4a22f_0          14 KB  conda-forge
     toml-0.10.2                |     pyhd8ed1ab_0          18 KB  conda-forge
@@ -162,7 +159,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       262.9 MB
+                                           Total:       239.6 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -174,7 +171,7 @@ The following NEW packages will be INSTALLED:
   cycler             conda-forge/noarch::cycler-0.11.0-pyhd8ed1ab_0 None
   dbus               conda-forge/linux-64::dbus-1.13.6-h5008d03_3 None
   expat              conda-forge/linux-64::expat-2.5.0-h27087fc_0 None
-  fftw               conda-forge/linux-64::fftw-3.3.10-nompi_hf0379b8_105 None
+  fftw               conda-forge/linux-64::fftw-3.3.10-nompi_hf0379b8_106 None
   font-ttf-dejavu-s~ conda-forge/noarch::font-ttf-dejavu-sans-mono-2.37-hab24e00_0 None
   font-ttf-inconsol~ conda-forge/noarch::font-ttf-inconsolata-3.000-h77eed37_0 None
   font-ttf-source-c~ conda-forge/noarch::font-ttf-source-code-pro-2.038-h77eed37_0 None
@@ -195,7 +192,7 @@ The following NEW packages will be INSTALLED:
   jpeg               conda-forge/linux-64::jpeg-9e-h166bdaf_2 None
   keyutils           conda-forge/linux-64::keyutils-1.6.1-h166bdaf_0 None
   kiwisolver         conda-forge/linux-64::kiwisolver-1.4.4-py310hbf28c38_1 None
-  krb5               conda-forge/linux-64::krb5-1.19.3-h3790be6_0 None
+  krb5               conda-forge/linux-64::krb5-1.19.3-h08a2579_0 None
   lame               conda-forge/linux-64::lame-3.100-h166bdaf_1003 None
   lcms2              conda-forge/linux-64::lcms2-2.14-h6ed2654_0 None
   lerc               conda-forge/linux-64::lerc-4.0.0-h27087fc_0 None
@@ -209,7 +206,7 @@ The following NEW packages will be INSTALLED:
   libdb              conda-forge/linux-64::libdb-6.2.32-h9c3ff4c_0 None
   libdeflate         conda-forge/linux-64::libdeflate-1.14-h166bdaf_0 None
   libedit            conda-forge/linux-64::libedit-3.1.20191231-he28a2e2_2 None
-  libevent           conda-forge/linux-64::libevent-2.1.10-h9b69904_4 None
+  libevent           conda-forge/linux-64::libevent-2.1.10-h28343ad_4 None
   libflac            conda-forge/linux-64::libflac-1.4.2-h27087fc_0 None
   libgcrypt          conda-forge/linux-64::libgcrypt-1.10.1-h166bdaf_0 None
   libglib            conda-forge/linux-64::libglib-2.74.1-h606061b_1 None
@@ -219,7 +216,7 @@ The following NEW packages will be INSTALLED:
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1 None
   libopus            conda-forge/linux-64::libopus-1.3.1-h7f98852_1 None
   libpng             conda-forge/linux-64::libpng-1.6.39-h753d276_0 None
-  libpq              conda-forge/linux-64::libpq-14.5-hf695f80_2 None
+  libpq              conda-forge/linux-64::libpq-15.1-h67c24c5_1 None
   libsndfile         conda-forge/linux-64::libsndfile-1.1.0-h27087fc_0 None
   libsystemd0        conda-forge/linux-64::libsystemd0-252-h2a991cd_0 None
   libtiff            conda-forge/linux-64::libtiff-4.4.0-h55922b4_4 None
@@ -235,8 +232,8 @@ The following NEW packages will be INSTALLED:
   matplotlib-base    conda-forge/linux-64::matplotlib-base-3.6.2-py310h8d5ebf3_0 None
   mpg123             conda-forge/linux-64::mpg123-1.30.2-h27087fc_1 None
   munkres            conda-forge/noarch::munkres-1.1.4-pyh9f0ad1d_0 None
-  mysql-common       conda-forge/linux-64::mysql-common-8.0.31-haf5c9bc_0 None
-  mysql-libs         conda-forge/linux-64::mysql-libs-8.0.31-h28c427c_0 None
+  mysql-common       conda-forge/linux-64::mysql-common-8.0.31-h26416b9_0 None
+  mysql-libs         conda-forge/linux-64::mysql-libs-8.0.31-hbc51c84_0 None
   nspr               conda-forge/linux-64::nspr-4.35-h27087fc_0 None
   nss                conda-forge/linux-64::nss-3.82-he02c5a1_0 None
   openjpeg           conda-forge/linux-64::openjpeg-2.5.0-h7d73246_1 None
@@ -245,12 +242,12 @@ The following NEW packages will be INSTALLED:
   pillow             conda-forge/linux-64::pillow-9.2.0-py310h454ad03_3 None
   ply                conda-forge/noarch::ply-3.11-py_1 None
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001 None
-  pulseaudio         conda-forge/linux-64::pulseaudio-16.1-h4a94279_0 None
+  pulseaudio         conda-forge/linux-64::pulseaudio-16.1-h126f2b6_0 None
   pyparsing          conda-forge/noarch::pyparsing-3.0.9-pyhd8ed1ab_0 None
   pyqt               conda-forge/linux-64::pyqt-5.15.7-py310h29803b5_2 None
   pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py310hd8f1fbe_2 None
   python-dateutil    conda-forge/noarch::python-dateutil-2.8.2-pyhd8ed1ab_0 None
-  qt-main            conda-forge/linux-64::qt-main-5.15.6-h7acdfc8_2 None
+  qt-main            conda-forge/linux-64::qt-main-5.15.6-he99da89_3 None
   sip                conda-forge/linux-64::sip-6.7.5-py310hd8f1fbe_0 None
   six                conda-forge/noarch::six-1.16.0-pyh6c4a22f_0 None
   toml               conda-forge/noarch::toml-0.10.2-pyhd8ed1ab_0 None
@@ -264,15 +261,6 @@ The following NEW packages will be INSTALLED:
   xorg-libxau        conda-forge/linux-64::xorg-libxau-1.0.9-h7f98852_0 None
   xorg-libxdmcp      conda-forge/linux-64::xorg-libxdmcp-1.1.3-h7f98852_0 None
   zstd               conda-forge/linux-64::zstd-1.5.2-h6239696_4 None
-
-The following packages will be UPDATED:
-
-  cryptography                       38.0.3-py310h600f1e7_0 --&gt; 38.0.4-py310h597c629_0 None
-  python                          3.10.6-ha86cf86_0_cpython --&gt; 3.10.8-h257c98d_0_cpython None
-
-The following packages will be DOWNGRADED:
-
-  openssl                                  3.0.7-h166bdaf_0 --&gt; 1.1.1s-h166bdaf_0 None
 
 
 Preparing transaction: ...working... done
@@ -322,4 +310,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Thursday 1 December 2022 18:18">Thursday 1 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Friday 2 December 2022 00:45">Friday 2 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
