--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -116,7 +116,7 @@ The following packages will be downloaded:
     libpq-15.1                 |       h67c24c5_1         2.4 MB  conda-forge
     libsndfile-1.1.0           |       hcb278e6_1         341 KB  conda-forge
     libsystemd0-252            |       h2a991cd_0         384 KB  conda-forge
-    libtiff-4.4.0              |       h55922b4_4         651 KB  conda-forge
+    libtiff-4.4.0              |       h82bc61c_5         473 KB  conda-forge
     libtool-2.4.6              |    h9c3ff4c_1008         511 KB  conda-forge
     libudev1-252               |       h166bdaf_0         118 KB  conda-forge
     libvorbis-1.3.7            |       h9c3ff4c_0         280 KB  conda-forge
@@ -159,7 +159,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       243.7 MB
+                                           Total:       243.5 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -219,7 +219,7 @@ The following NEW packages will be INSTALLED:
   libpq              conda-forge/linux-64::libpq-15.1-h67c24c5_1
   libsndfile         conda-forge/linux-64::libsndfile-1.1.0-hcb278e6_1
   libsystemd0        conda-forge/linux-64::libsystemd0-252-h2a991cd_0
-  libtiff            conda-forge/linux-64::libtiff-4.4.0-h55922b4_4
+  libtiff            conda-forge/linux-64::libtiff-4.4.0-h82bc61c_5
   libtool            conda-forge/linux-64::libtool-2.4.6-h9c3ff4c_1008
   libudev1           conda-forge/linux-64::libudev1-252-h166bdaf_0
   libvorbis          conda-forge/linux-64::libvorbis-1.3.7-h9c3ff4c_0
@@ -309,4 +309,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Saturday 17 December 2022 18:13">Saturday 17 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Sunday 18 December 2022 00:44">Sunday 18 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
